# temporal-safe-deploys-lab

./: .gitignore  Dockerfile  Dockerfile.devenv  README.md  pyproject.toml
charts/infra/: Chart.yaml
charts/infra/templates/: temporal-connection.yaml
charts/worker/: Chart.yaml  values.yaml
charts/worker-simple/: Chart.yaml  values.yaml
charts/worker-simple/templates/: deployment.yaml
charts/worker/templates/: temporal-worker-deployment.yaml
scripts/: build-and-deploy.sh  devenv.sh  entrypoint.sh
src/: activities.py  mock_llm.py  models.py  worker.py  workflows.py
