[project]
name = "temporal-safe-deploys-lab"
version = "0.1.0"
description = "Sample project for the Safe Deployments with Temporal Worker Versioning lab"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
